# softshader

./: README.md  g  softshader.cabal  stack.yaml
src/: Example1.hs  Grafix.hs  Img.hs  Shader.hs
