name:                softshader
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

executable example1
  hs-source-dirs:      src
  main-is:             Example1.hs
  other-modules:       Grafix, FPS, Img, Shader, Util, Window
  --extra-libraries:     gfx.o
  --c-sources:           gfx.c
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array,
                       containers,
                       linear,
                       pretty-simple,
                       sdl2,
                       text,
                       time,
                       vector
